--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "dependencies": {
     "classnames": "^2.1.2",
     "material-ui": "^0.18.5",
+    "prism": "^4.1.2",
     "react-color": "^2.13.0",
     "react-tap-event-plugin": "^2.0.1"
   },
