--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "nanoleaf-layout",
-  "version": "2.0.0",
+  "version": "2.0.1",
   "description": "Uses a React Component to easily take your physical Nanoleaf layout and display in on a 2D Screen",
   "keyword": [
     "nanoleaf",
@@ -22,6 +22,8 @@
   "dependencies": {
     "classnames": "^2.1.2",
     "material-ui": "^0.18.5",
+    "mobx": "^3.2.0",
+    "mobx-react": "^4.2.2",
     "prism": "^4.1.2",
     "react-color": "^2.13.0",
     "react-tap-event-plugin": "^2.0.1"
