--- a/package.json
+++ b/package.json
@@ -24,18 +24,22 @@
     "material-ui": "^0.18.5",
     "mobx": "^3.2.0",
     "mobx-react": "^4.2.2",
+    "prettier": "^1.5.2",
     "prism": "^4.1.2",
     "react-color": "^2.13.0",
-    "react-tap-event-plugin": "^2.0.1"
+    "react-tap-event-plugin": "^2.0.1",
+    "prop-types": "latest"
   },
   "devDependencies": {
     "babel-eslint": "^4.1.3",
     "eslint": "^1.6.0",
     "eslint-plugin-react": "^3.5.1",
     "gulp": "^3.9.0",
+    "jest": "^20.0.4",
     "react": "^0.14.0",
     "react-component-gulp-tasks": "^0.7.6",
-    "react-dom": "^0.14.0"
+    "react-dom": "^0.14.0",
+    "react-test-renderer": "^15.6.1"
   },
   "peerDependencies": {
     "react": "^0.14.0"
@@ -51,7 +55,7 @@
     "publish:site": "NODE_ENV=production gulp publish:examples",
     "release": "NODE_ENV=production gulp release",
     "start": "gulp dev",
-    "test": "echo \"no tests yet\" && exit 0",
+    "test": "jest",
     "watch": "gulp watch:lib"
   },
   "keywords": [
