--- a/package.json
+++ b/package.json
@@ -12,7 +12,10 @@
     "test:watch": "nwb test-react --server"
   },
   "dependencies": {
+    "material-ui": "^0.18.6",
+    "prop-types": "latest",
     "react": "^15.6.1",
+    "react-color": "^2.13.1",
     "react-dom": "^15.6.1"
   },
   "devDependencies": {
