--- a/package.json
+++ b/package.json
@@ -10,11 +10,11 @@
     "component"
   ],
   "scripts": {
-    "build": "nwb build-react-app",
+    "build": "nwb build-react-component",
     "clean": "nwb clean-app",
-    "start": "nwb serve-react-app",
-    "test": "jest",
-    "test:coverage": "jest --coverage",
+    "start": "nwb serve-react-app demo/src",
+    "test": "jest && codecov -t 4489cd0c-0404-431a-bb3e-13d09ad89245",
+    "test:coverage": "jest --coverage && codecov -t 4489cd0c-0404-431a-bb3e-13d09ad89245",
     "test:watch": "nwb test-react --server"
   },
   "dependencies": {
