--- a/package.json
+++ b/package.json
@@ -28,10 +28,15 @@
     "save-dev": "^2.0.0"
   },
   "devDependencies": {
+    "babel-cli": "^6.24.1",
+    "babel-jest": "^20.0.3",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-react": "^6.24.1",
     "enzyme": "^2.9.1",
     "jest": "^20.0.4",
     "nwb": "0.18.x",
-    "react-addons-test-utils": "^15.6.0"
+    "react-addons-test-utils": "^15.6.0",
+    "regenerator-runtime": "^0.10.5"
   },
   "keywords": [
     "react",
@@ -44,7 +49,10 @@
     "webpack"
   ],
   "babel": {
-    "presets": ["es2015", "react"]
+    "presets": [
+      "es2015",
+      "react"
+    ]
   },
   "files": [
     "lib",
