--- a/__tests__/.eslintrc
+++ b/__tests__/.eslintrc
@@ -1,5 +1,19 @@
 {
   "env": {
     "mocha": true
+  },
+  "parserOptions": {
+    "ecmaVersion": 6,
+    "sourceType": "module",
+    "ecmaFeatures": {
+      "jsx": true
+    }
+  },
+  "plugins": [
+    "prettier"
+  ],
+  "rules": {
+    "prettier/prettier": "error",
+    "semi":2
   }
 }
