--- a/package.json
+++ b/package.json
@@ -33,8 +33,10 @@
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "enzyme": "^2.9.1",
+    "eslint-plugin-prettier": "^2.1.2",
     "jest": "^20.0.4",
     "nwb": "0.18.x",
+    "prettier": "^1.5.2",
     "react-addons-test-utils": "^15.6.0",
     "regenerator-runtime": "^0.10.5"
   },
