--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,7 @@ node_js:
 before_install:
   - npm install jest babel-cli babel-preset-es2015 babel-preset-react
   - npm install codecov.io coveralls
+  - npm run test
 
 after_success:
   - cat ./coverage/lcov.info | ./node_modules/codecov.io/bin/codecov.io.js
