--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "build": "nwb build-react-component",
     "clean": "nwb clean-app",
     "start": "nwb serve-react-app demo/src",
-    "test": "jest && codecov -t 4489cd0c-0404-431a-bb3e-13d09ad89245",
+    "test": "jest",
     "test:coverage": "jest --coverage && codecov -t 4489cd0c-0404-431a-bb3e-13d09ad89245",
     "test:watch": "nwb test-react --server"
   },
