--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "enzyme": "^2.9.1",
     "eslint-plugin-prettier": "^2.1.2",
     "jest": "^20.0.4",
+    "now": "^7.2.4",
     "nwb": "0.18.x",
     "prettier": "^1.5.2",
     "react-addons-test-utils": "^15.6.0",
