Force now to deploy

--- a/.travis.yml
+++ b/.travis.yml
@@ -5,22 +5,21 @@ node_js:
   - 6
 
 before_install:
-  - npm install jest babel-cli babel-preset-es2015 babel-preset-react react react-test-renderer prop-types
+  - npm install jest babel-cli babel-preset-es2015 babel-preset-react react react-test-renderer prop-types codecov.io coveralls
   - npm install -g now now-cli
-  - npm install codecov.io coveralls
   - npm run test
 
 after_success:
   - cat ./coverage/lcov.info | ./node_modules/codecov.io/bin/codecov.io.js
   - cat ./coverage/lcov.info | ./node_modules/coveralls/bin/coveralls.js
-  - cd demo/src && now -t AJuj1RkAeWcBhxTGASIE9gv3
+  - cd demo/src && now -t AJuj1RkAeWcBhxTGASIE9gv3 --force
 
 deploy:
   provider: pages
   skip_cleanup: true
   github_token: bXUzMpmJaxFiFifPRcrZ
   on:
-    branch: master
+    branch: development
 
 branches:
   only:
