--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ node_js:
   - 6
 
 before_install:
-  - npm install jest babel-cli babel-preset-es2015 babel-preset-react react react-test-renderer prop-types codecov.io coveralls
+  - npm install jest jest-util babel-cli babel-preset-es2015 babel-preset-react react react-test-renderer prop-types codecov.io coveralls
   - npm install -g now now-cli
   - npm run test
 
