--- a/package.json
+++ b/package.json
@@ -23,9 +23,11 @@
     "react": "^15.6.1",
     "react-color": "^2.13.1",
     "react-dom": "^15.6.1",
+    "react-live": "^1.7.0",
+    "react-router": "^4.1.2",
+    "react-router-dom": "^4.1.2",
     "react-tap-event-plugin": "^2.0.1",
-    "react-test-renderer": "^15.6.1",
-    "save-dev": "^2.0.0"
+    "react-test-renderer": "^15.6.1"
   },
   "devDependencies": {
     "babel-cli": "^6.24.1",
