--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "test:watch": "nwb test-react --server"
   },
   "dependencies": {
+    "bootstrap": "^3.3.7",
     "material-ui": "^0.18.6",
     "prop-types": "^15.5.10",
     "react": "^15.6.1",
