--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react": "^15.6.1",
     "react-color": "^2.13.1",
     "react-dom": "^15.6.1",
+    "react-highlight": "^0.10.0",
     "react-live": "^1.7.0",
     "react-router": "^4.1.2",
     "react-router-dom": "^4.1.2",
