--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "dependencies": {
     "bootstrap": "^3.3.7",
+    "lodash": "^4.17.4",
     "material-ui": "^0.18.6",
     "prop-types": "^15.5.10",
     "react": "^15.6.1",
