--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "bootstrap": "^3.3.7",
     "lodash": "^4.17.4",
     "material-ui": "^0.18.6",
+    "nwb": "^0.18.8",
     "prop-types": "^15.5.10",
     "react": "^15.6.1",
     "react-color": "^2.13.1",
