--- a/package.json
+++ b/package.json
@@ -45,7 +45,8 @@
     "nwb": "0.18.x",
     "prettier": "^1.5.2",
     "react-addons-test-utils": "^15.6.0",
-    "regenerator-runtime": "^0.10.5"
+    "regenerator-runtime": "^0.10.5",
+    "webpack": "^3.11.0"
   },
   "keywords": [
     "react",
