--- a/package.json
+++ b/package.json
@@ -10,41 +10,38 @@
     "component"
   ],
   "scripts": {
-    "build": "nwb build-react-component",
-    "clean": "nwb clean-app",
-    "start": "nwb serve-react-app demo/src",
+    "build": "webpack --mode production",
     "test": "jest",
-    "test:coverage": "jest --coverage && codecov -t 4489cd0c-0404-431a-bb3e-13d09ad89245",
-    "test:watch": "nwb test-react --server"
+    "test:coverage": "jest --coverage && codecov -t 4489cd0c-0404-431a-bb3e-13d09ad89245"
   },
   "dependencies": {
-    "bootstrap": "^3.3.7",
+    "babel-preset-stage-0": "^6.24.1",
     "lodash": "^4.17.4",
-    "material-ui": "^0.18.6",
-    "nwb": "^0.18.8",
     "prop-types": "^15.5.10",
-    "react": "^15.6.1",
     "react-color": "^2.13.1",
-    "react-dom": "^15.6.1",
     "react-highlight": "^0.10.0",
     "react-live": "^1.7.0",
-    "react-router": "^4.1.2",
-    "react-router-dom": "^4.1.2",
     "react-tap-event-plugin": "^2.0.1",
     "react-test-renderer": "^15.6.1"
   },
   "devDependencies": {
+    "@babel/core": "^7.2.0",
+    "@babel/preset-env": "^7.2.0",
+    "@babel/preset-react": "^7.0.0",
     "babel-cli": "^6.24.1",
     "babel-jest": "^20.0.3",
-    "babel-preset-es2015": "^6.24.1",
+    "babel-loader": "^8.0.4",
     "babel-preset-react": "^6.24.1",
-    "enzyme": "^2.9.1",
+    "eslint": "^5.10.0",
+    "eslint-config-airbnb": "^17.1.0",
+    "eslint-plugin-import": "^2.14.0",
+    "eslint-plugin-jsx-a11y": "^6.1.2",
     "eslint-plugin-prettier": "^2.1.2",
+    "eslint-plugin-react": "^7.11.1",
     "jest": "^20.0.4",
-    "now": "^7.2.4",
-    "nwb": "0.18.x",
-    "prettier": "^1.5.2",
+    "react": "^15.6.2",
     "react-addons-test-utils": "^15.6.0",
+    "react-dom": "^15.6.2",
     "regenerator-runtime": "^0.10.5",
     "webpack": "^3.11.0"
   },
@@ -58,11 +55,8 @@
     "babel",
     "webpack"
   ],
-  "babel": {
-    "presets": [
-      "es2015",
-      "react"
-    ]
+  "eslintConfig": {
+    "extends": "airbnb"
   },
   "files": [
     "lib",
