Fixed Webpack build added Enzyme unit tests for React component

--- a/package.json
+++ b/package.json
@@ -11,28 +11,18 @@
   ],
   "scripts": {
     "build": "webpack --config ./webpack.config.js --mode production",
-    "test": "./node_modules/.bin/mocha ./test/* --timeout 4000 --exit",
+    "test": "./node_modules/.bin/mocha ./test/* --timeout 4000 --exit --require @babel/register",
     "test:coverage": "jest --coverage && codecov -t 4489cd0c-0404-431a-bb3e-13d09ad89245"
   },
   "dependencies": {
-    "babel-preset-stage-0": "^6.24.1",
-    "lodash": "^4.17.4",
-    "prop-types": "^15.5.10",
-    "react-color": "^2.13.1",
-    "react-highlight": "^0.10.0",
-    "react-live": "^1.7.0",
-    "react-tap-event-plugin": "^2.0.1",
-    "react-test-renderer": "^15.6.1"
+    "prop-types": "^15.5.10"
   },
   "devDependencies": {
     "@babel/core": "^7.2.0",
     "@babel/preset-env": "^7.2.0",
     "@babel/preset-react": "^7.0.0",
-    "babel-cli": "^6.24.1",
-    "babel-core": "^6.26.3",
-    "babel-jest": "^20.0.3",
+    "@babel/register": "^7.0.0",
     "babel-loader": "^8.0.4",
-    "babel-preset-env": "^1.7.0",
     "chai": "^4.2.0",
     "enzyme": "^3.8.0",
     "enzyme-adapter-react-16": "^1.7.1",
@@ -42,12 +32,14 @@
     "eslint-plugin-jsx-a11y": "^6.1.2",
     "eslint-plugin-prettier": "^2.7.0",
     "eslint-plugin-react": "^7.11.1",
-    "jest": "^20.0.4",
+    "jsdom": "13.0.0",
+    "jsdom-global": "3.0.2",
     "mocha": "^5.2.0",
-    "react": "^15.6.2",
-    "react-addons-test-utils": "^15.6.0",
-    "react-dom": "^15.6.2",
+    "prettier": "^1.15.3",
+    "react": "^16.6.3",
+    "react-dom": "^16.6.3",
     "regenerator-runtime": "^0.10.5",
+    "sinon": "^7.2.2",
     "webpack": "^4.27.1",
     "webpack-cli": "^3.1.2"
   },
