--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "mocha": "^5.2.0",
     "prettier": "^1.15.3",
     "react": "^16.6.3",
+    "react-dom": "^16.6.3",
     "regenerator-runtime": "^0.10.5",
     "sinon": "^7.2.2",
     "webpack": "^4.27.1",
