added build script and fixed event hooks

--- a/.travis.yml
+++ b/.travis.yml
@@ -9,3 +9,8 @@ before_install:
 
 after_success:
   - cat ./coverage/lcov.info | ./node_modules/coveralls/bin/coveralls.js
+  -
+deploy:
+  provider: npm
+  email: "cbartram3@gmail.com"
+  api_key: NPM_TOKEN
